[package]
name = "bipu"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5.1", features = ["check"] }
clap = "4.5.46"
getrandom = "0.3.3"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
ripemd = "0.1.3"
secp256k1 = { version = "0.31.1", features = ["global-context"] }
sha2 = "0.10.9"
unicode-normalization = "0.1.24"
